--- a/LibWebAPI/appsettings.json
+++ b/LibWebAPI/appsettings.json
@@ -10,5 +10,10 @@
   "ConnectionStrings": {
     "SqlConnection": "Server=(localdb)\\MSSqlLocalDb;Database=Library;Trusted_Connection=True",
     "DefaultConnection": "localhost"
+  },
+  "WorkerService": {
+    "TaskInterval": 3000,
+    "UserName": "swn",
+    "IdentityServerUrl": "https://localhost:5005"
   }
 }
